--- a/friends.html
+++ b/friends.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="css/styles.css">
 
@@ -8,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to Kokoa Talk</title>
 </head>
+
 <body>
     
     <div class="status-bar">
@@ -27,6 +29,17 @@
             <!--lighting icon-->
         </div>
     </div>
+
+    <header class="screen-header">
+        <h1 class="screen-header__title">Frieds</h1>
+        <div class="screen-hearder__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+    </header>
+
+    <a id="friends-display-link"><i class="fas fa-info-circle"></i>Friend's Names Display<i class="fas fa-chevron-right fa-xs"></i></a>
 
     <nav class="nav">
         <ul class="nav__list">
