--- a/find.html
+++ b/find.html
@@ -41,16 +41,43 @@
     
 
     <main class="main-screen">      
-      <div class="find-icons">
-          <div class="find-icons__icon"><i class="fas fa-qrcode"></i><span>QR Code</span></div>
-          <div class="find-icons__icon"><i class="far fa-address-book"></i><span>Add by Contacts</span></div>
-          <div class="find-icons__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
-          <div class="find-icons__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
+      <div class="icons-rows">
+          <div class="icons-rows__icon"><i class="fas fa-qrcode"></i><span>QR Code</span></div>
+          <div class="icons-rows__icon"><i class="far fa-address-book"></i><span>Add by Contacts</span></div>
+          <div class="icons-rows__icon"><i class="fas fa-fingerprint"></i><span>Add by ID</span></div>
+          <div class="icons-rows__icon"><i class="far fa-envelope"></i><span>Invite</span></div>
         </div>
    
         <div class="recommended-freinds">
             <h6 class="recommended-freinds__title">Recommended-Freinds</h6>
             <span>You have no recommended freinds</span>   
+        </div>
+
+        <div class="open-chat">
+            <div class="open-chat__header">
+                <h4 class="open-chat__title">Open chat</h4>
+                <span>Go to Openchat Home<i class="fas fa-chevron-right fa-xs"></i></span>
+            </div>
+            <div class="open-post">
+                <div class="open-post__column">
+                    <h5 class="open-post__title">#BTS</h5>
+                    <h6 class="open-post__hashtags">#bts#army#friend</h6>
+                    <div class="open-post__members">
+                        <img src="kaka.png">
+                        <span class="open-post__member-count">802 members</span>
+                        <div class="divider"></div>
+                        <span class="open-post__member-status">Active</span>
+                    </div>
+                </div>
+                <div class="open-post__column">
+                   <div class="open-post__photo">
+                    <img src="ryu.jpg">
+                    <div class="open-post__heart-count">
+                        <i class="fas fa-heart fa-xs"></i><span>326</span>
+                    </div>
+                   </div>
+                </div>
+            </div>
         </div>
 
     </main>
