--- a/chat.html
+++ b/chat.html
@@ -76,7 +76,7 @@
         
         <div class="reply__column">
             <input type="text" placeholder="Write a message..."/>
-            <i class="far fa-grin fa-lg"></i>
+            <i id="icon-push" class="far fa-grin fa-lg"></i>
             <button>
             <i class="fas fa-arrow-up"></i>
             </button>
@@ -86,6 +86,9 @@
 
  
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
 
 
 
