--- a/find.html
+++ b/find.html
@@ -96,7 +96,11 @@
     </nav>
     
 
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
 
+    
   
 <script src="https://kit.fontawesome.com/a9eb1f10be.js" crossorigin="anonymous"></script>
 </body>
