--- a/friends.html
+++ b/friends.html
@@ -86,7 +86,15 @@
         </ul>
     </nav>
     
+    <div id="splash-screen">
+        <i class="fas fa-comment"></i>
+    </div>
 
+
+
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
 
   
     <script src="https://kit.fontawesome.com/a9eb1f10be.js" crossorigin="anonymous"></script>
