--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
         <a href="#">Find Kokoa Account or Password</a>
     </form>
    
+    <div id="no-mobile">
+        <span>Your screen is too big</span>
+    </div>
 
 
   
