--- a/chat.html
+++ b/chat.html
@@ -7,7 +7,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat w/Nico - kokoa Clone</title>
+    <title>Welcome To Kickcha's KAKAO</title>
 </head>
 
 
@@ -16,12 +16,12 @@
     
     <div class="status-bar">
         <div class="status-bar__column">
-            <Span>No Service</Span>
+            <Span>SKT</Span>
             <i class="fas fa-wifi"></i>
             <!--to do wifi Icon-->
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>05:17</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
@@ -34,7 +34,7 @@
 
     <header class="alt-header">
         <div class="alt-header__column"><a href="chats.html"><i class="fas fa-angle-left fa-3x"></i></a></div>
-        <div class="alt-header__column"><h1 class="alt-header__title">Nicolas Serrano</h1></div>
+        <div class="alt-header__column"><h1 class="alt-header__title">멋사</h1></div>
         <div class="alt-header__column">
             <span><i class="fas fa-search fa-2x"></i></span>
             <span><i class="fas fa-bars fa-2x"></i></span>
@@ -46,15 +46,15 @@
 
     <main class="main-screen main-chat">
         <div class="chat__timestamp">
-            Tuesday, June 30, 2020
+            Wednesday, MAY 17, 2023
         </div>
         <div class="message-row">
-            <img src="kaka.png">
+            <img src="멋사.png">
             <div class="message-row__content">
-                <span class="message__author">Nicolas</span>
+                <span class="message__author">멋사</span>
                 <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
-                    <span class="message__time">21:27</span>
+                    <span class="message__bubble">아이고 힘들다</span>
+                    <span class="message__time">12:00</span>
                 </div>
             </div>
         </div>
@@ -62,8 +62,8 @@
         <div class="message-row message-row--own">
             <div class="message-row__content">                
                 <div class="message__info">
-                    <span class="message__bubble">Hi! Nice to meet you!</span>
-                    <span class="message__time">21:27</span>
+                    <span class="message__bubble">아프냐? 나도 아프다</span>
+                    <span class="message__time">12:01</span>
                 </div>
             </div>
         </div>     
@@ -85,10 +85,6 @@
     </form>
 
  
-
-    <div id="no-mobile">
-        <span>Your screen is too big</span>
-    </div>
 
 
 
