--- a/chats.html
+++ b/chats.html
@@ -7,19 +7,19 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome To Kickcha's KAKAO</title>
 </head>
 
 <body>
     
     <div class="status-bar">
         <div class="status-bar__column">
-            <Span>No Service</Span>
+            <Span>SKT</Span>
             <i class="fas fa-wifi"></i>
             <!--to do wifi Icon-->
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>05:17</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
@@ -34,7 +34,6 @@
         <h1 class="screen-header__title">Chats</h1>
         <div class="screen-hearder__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
-            <span><i class="far fa-comment-dots fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
             <span><i class="fas fa-cog fa-lg"></i></span>
         </div>
@@ -46,14 +45,14 @@
         <a href="chat.html">
         <div class="user-component">
             <div class="user-component__column">
-                <img src="kaka.png" class="user-component__avatar user-component__avatar"/>
+                <img src="멋사.png" class="user-component__avatar user-component__avatar"/>
                 <div class="user-component__text">
-                    <h4 class="user-component__title">KaKao Talk</h4>
-                   <h6 class="user-component__subtitle">Plesase check My Kakao Account Info</h6>
+                    <h4 class="user-component__title">멋사</h4>
+                   <h6 class="user-component__subtitle">아이고 힘들다</h6>
                 </div>
             </div>
             <div class="user-component__column">
-                <span class="user-component__time">15:22</span>
+                <span class="user-component__time">05:17</span>
                 <div class="badge">1</div>
             </div>
         </div>
@@ -67,16 +66,12 @@
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav_btn"><a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a></li>
-           <li class="nav_btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="fas fa-comment fa-2x"></i></a></li>
+           <li class="nav_btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge"></span><i class="fas fa-comment fa-2x"></i></a></li>
            <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
            <li class="nav_btn"><a class="nav__link" href="more.html"><span class="nav__notification2"></span><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
     </nav>
     
-    <div id="no-mobile">
-        <span>Your screen is too big</span>
-    </div>
-
 
   
 <script src="https://kit.fontawesome.com/a9eb1f10be.js" crossorigin="anonymous"></script>
