--- a/friends.html
+++ b/friends.html
@@ -7,19 +7,19 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome To Kickcha's KAKAO</title>
 </head>
 
 <body>
     
     <div class="status-bar">
         <div class="status-bar__column">
-            <Span>No Service</Span>
+            <Span>SKT</Span>
             <i class="fas fa-wifi"></i>
             <!--to do wifi Icon-->
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>05:17</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
@@ -31,7 +31,7 @@
     </div>
 
     <header class="screen-header">
-        <h1 class="screen-header__title">Frieds</h1>
+        <h1 class="screen-header__title">Friends</h1>
         <div class="screen-hearder__icons">
             <span><i class="fas fa-search fa-lg"></i></span>
             <span><i class="fas fa-music fa-lg"></i></span>
@@ -45,10 +45,9 @@
        
         <div class="user-component">
             <div class="user-component__column">
-                <img src="ryu.jpg" class="user-component__avatar user-component__avatar--xl"/>
+                <img src="포비.jpeg" class="user-component__avatar user-component__avatar--xl"/>
                 <div class="user-component__text">
-                    <h4 class="user-component__title">RyuTurtle</h4>
-                  <!--  <h6 class="user-component__subtitle">this text whatever</h6>-->
+                    <h4 class="user-component__title">차승민</h4>
                 </div>
             </div>
             <div class="user-component__column"></div>
@@ -63,7 +62,6 @@
                     <img src="kaka.png" class="user-component__avatar user-component__avatar--sm"/>
                     <div class="user-component__text">
                         <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-                      <!--  <h6 class="user-component__subtitle">this text whatever</h6>-->
                     </div>
                 </div>
                 <div class="user-component__column">
@@ -71,16 +69,11 @@
                 </div>
             </div>
         </div>
-   
-   
     </main>
-
-
-
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav_btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li>
-           <li class="nav_btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge">1</span><i class="far fa-comment fa-2x"></i></a></li>
+           <li class="nav_btn"><a class="nav__link" href="chats.html"><span class="nav__notification badge"></span><i class="far fa-comment fa-2x"></i></a></li>
            <li class="nav_btn"><a class="nav__link" href="find.html"><i class="fas fa-search fa-2x"></i></a></li>
            <li class="nav_btn"><a class="nav__link" href="more.html"><span class="nav__notification2"></span><i class="fas fa-ellipsis-h fa-2x"></i></a></li>
         </ul>
@@ -89,13 +82,6 @@
     <div id="splash-screen">
         <i class="fas fa-comment"></i>
     </div>
-
-
-
-    <div id="no-mobile">
-        <span>Your screen is too big</span>
-    </div>
-
   
     <script src="https://kit.fontawesome.com/a9eb1f10be.js" crossorigin="anonymous"></script>
 </body>
