--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/styles.css">
-
-
+    <script src="https://kit.fontawesome.com/a9eb1f10be.js" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to Kokoa Talk</title>
+    <title>Welcome To Kickcha's KAKAO</title>
 </head>
 <body>
-    
+
     <div class="status-bar">
         <div class="status-bar__column">
-            <Span>No Service</Span>
+            <Span>SKT</Span>
             <i class="fas fa-wifi"></i>
             <!--to do wifi Icon-->
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>05:17</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
@@ -29,26 +28,30 @@
     </div>
 
     <header class="welcome-header">
-        <h1 class="welcome-header__title" >Welcome to KoKoa Clone</h1>
-        <p class="welcome-header__text"> if you have a KaKao Account, log in with your email or phone number,</p>
+        <h1 class="welcome-header__title" >Welcome To Kickcha's KAKAO</h1>
+        <p class="welcome-header__text"> if you have a KaKao Account, log in with your email or phone number.</p>
     </header>
 
-    <form action="friends.html" method="get" id="login-form">
-        <input type="text" placeholder="Email or phone number"/>
-        <input type="password" placeholder="Password"/>
+    <form action="friends.html" method="get" id="login-form" onsubmit="return validateForm()">
+        <input type="text" id="email-phone" placeholder="Email or phone number" required/>
+        <input type="password" id="password" placeholder="Password" required/>
         <input type="submit" value="Log in"/>
-        <a href="#">Find Kokoa Account or Password</a>
+        <a href="#">Find Kakao Account or Password</a>
     </form>
-   
-    <div id="no-mobile">
-        <span>Your screen is too big</span>
-    </div>
 
+    <script>
+        function validateForm() {
+            var emailPhone = document.getElementById("email-phone").value;
+            var password = document.getElementById("password").value;
 
-  
-    <script src="https://kit.fontawesome.com/a9eb1f10be.js" crossorigin="anonymous"></script>
+            if (emailPhone.trim() === "" || password.trim() === "") {
+                alert("Please enter your email or phone number and password.");
+                return false;
+            }
+        }
+    </script>
+
 </body>
 </html>
-
 
 
